@@ -19,8 +19,7 @@
         <!-- S, T or FILE -->
         <property name="dvb-type" type="string" required="true" />
 	<property name="frequency" type="int" required="false" />
-	<property name="pids" type="string" required="true" />
-	<property name="program-number" type="int" />
+	<property name="program-number" type="int" required="true" />
 	<property name="has-video" type="bool" required="false" />
 	<property name="video-decoder" type="string" required="false" />
 	<property name="audio-decoder" type="string" required="false" />
